client/src/sections/Home.scss
@use "../master.scss";

.hero {
  text-align: center;
  position: relative;
  padding-top: 125px;
  padding-bottom: 125px;
}

.hero-bg {
  background: url("/hero.jpg") center/cover;
}
.hero-mob-bg {
  background: url("/hero-mob.jpg") center/cover;
}

.hero h1 {
  width: fit-content;
  margin-left: auto;
  margin-right: auto;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
  border-radius: 5px;
}

.hero img {
  width: 100px;
  height: 100px;
  position: absolute;
}

.hero .hero-img1 {
  top: 20px;
  left: 20px;
}

.hero .hero-img2 {
  top: 20px;
  right: 20px;
}

.hero .hero-img3 {
  bottom: 20px;
  right: 20px;
}

.hero input {
  width: 40%;
  margin-top: 50px;
}

.search-service-container {
  position: relative;
}

.services-results-container {
  width: 40%;
  max-height: 150px;
  overflow-y: scroll;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  margin-left: auto;
  margin-right: auto;
  border-radius: 5px;
}

.service-result {
  display: flex;
  align-items: center;
  justify-content: space-between;
  column-gap: 10px;
  padding: 5px;
  margin-bottom: 10px;
}

@media (max-width: 768px) {
  .hero input {
    width: 80%;
  }

  .services-results-container {
    width: 80%;
    max-height: 250px;
    font-size: 20px;
  }

  .service-result {
    flex-direction: column;
    justify-content: center;
    row-gap: 5px;
  }
}
.why-choose-us {
  text-align: center;
}

.why-choose-us-boxes {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 20px;
}

.why-choose-us-boxes h3 {
  text-align: center;
}

.why-choose-us-boxes div {
  width: 250px;
  text-align: center;
}

.how-to-get-started p {
  margin-bottom: 10px;
}

.how-to-get-started .button-container {
  display: flex;
  justify-content: center;
  gap: 10px;
}

